# KKhub

./: README.md  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kk/hub/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/kk/hub/: ILocalMessage.aidl  ILocalMessageCallBack.aidl
app/src/main/aidl/com/kk/hub/model/: AIDLResultModel.aidl
app/src/main/cpp/: native-test.cpp
app/src/main/java/com/kk/hub/: App.kt  KotlinSummary.kt
app/src/main/java/com/kk/hub/common/config/: AppConfig.kt  GSYImageConst.kt  MarkDownConfig.kt
app/src/main/java/com/kk/hub/common/image/: BlurTransformation.kt  GSYImageLoader.kt  GSYImageLoaderManager.kt  GSYLoadOption.kt
app/src/main/java/com/kk/hub/common/net/: FlatMapResponse2Result.kt  (+7 more)
app/src/main/java/com/kk/hub/di/: ARouterInjectable.kt  AppDi.kt  AppInjector.kt  Injectable.kt
app/src/main/java/com/kk/hub/model/: AIDLResultModel.kt
app/src/main/java/com/kk/hub/module/: EXViewModelFactory.kt
app/src/main/java/com/kk/hub/ui/: GSYWebView.kt  GSYWebViewContainer.kt  LoadingDialog.kt  StateButton.kt
app/src/main/java/com/kk/hub/webservice/: CommitService.kt  IssueService.kt  LoginService.kt  NotificationService.kt  RepoService.kt  UserService.kt
app/src/main/res/layout/: activity_main.xml  activity_startnavigation.xml  activity_test.xml  fragment_login.xml  fragment_welcome.xml
app/src/main/res/navigation/: gsy_navigation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kk/hub/: ExampleUnitTest.kt
(+105 files in other folders)
